css/ink-local.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";


$body-background:           #e0e0e0;
$top-background:			#212121;
$right-drawer-background:	#3d3d3d;
$accent-red:				#c00;

/*

// Import partials from `sass_dir` (defaults to `_sass`)
@import
	"base",
	"layout",
	"syntax-highlighting"
;
*/

* :focus { outline: 0; }

body {
	background: $body-background;
	font-size: 18px;
}

.avatar img {
	border: 2px solid $accent-red;
	margin: 40px;
	border-radius: 1000px;
	-moz-border-radius: 1000px;
	width: 140px;
	height: 140px;
}

.top-bar {
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	z-index: 100;
	border-bottom: 5px $accent-red solid;
	background: $top-background;
}

.top-bar a {
	height: 100%;
	padding: .68em 1.28em;
	color: #ccc;
	text-decoration: none;
}

.top-bar a:hover {
	color: #fff;
	background: #444;
}

.top-bar .right-drawer-trigger {
	width: 220px;
}

.top-bar a span {
	margin-left: .4em;
}

.top-bar-title {
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	transform: translate(0, 0)
}

header {
	margin-top: 100px;
}

.right-drawer {
	margin-top: 2.36em; // 1 + .68x2 (the padding of the menu items)
	background: $right-drawer-background;
}

.right-drawer .items {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

.right-drawer .items li {
	margin: 0;
	border-bottom: 1px solid #444;
	text-transform: uppercase;
}

.right-drawer .items li a {
	display: block;
	color: #b3b3b3;
	padding: .48em 1.28em;
	text-decoration: none;
}

.right-drawer .items li a span {
	margin-right: .875em;
	font-weight: 300;
}

.right-drawer .items li:hover {
	color: #fff;
	background: $top-background
}

.right-drawer .items li:hover a {
	color: #fff;
}

a:hover span.fa{
	color: $accent-red;
}

.right-drawer .items li.active {
	color: #fff;
	background: #404040;
}

.right-drawer .items li.active a {
	color: #fff;
}

.post-overview {
	background: #fff;
	padding: 20px;
}

.post-meta {
	color: #a8a8a8;
	padding: 0 0 .3em 0;
	border-bottom: 1px solid #ccc;
	span {
		margin-right: .4em;
	}
}

